This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.7.2
  Syntax highlighting for PowerShell files (#1859657)
  BugFix: Crash when using TrackPoint middle-button scrolling (#1864040)

WinMerge 2.7.7.1 - 2007-12-20 (r4842)
  New option to keep file's time when saving in file compare (#1851921)
  Installer: Link to translated ReadMe in Start menu, if file exists (#1805818)
  Add HTML-formatted release notes (#1851308, #1852534)
  Installer: Install release notes file (#1852599)
  Installer: Move manual to core files component and remove
   User Guide component (#1853409)
  Bugfix: VS2008 and VS2005 compile problems (#1847265)
  Bugfix: More difference highlight code reverts (#1748940)
  Translation updates:
  - Spanish (#1655577)

WinMerge 2.7.6 - 2007-11-29 (r4807)
  Touchpad scrolling improvements (#1837457)
  BugFix: Values with "," inside could break the CSV report (#1831512)
  BugFix: Failed to create backup file in folder compare (#1835283)
  BugFix: Revert difference highlight code to 2.6.12 version (#1811695)
  BugFix: Backspace key didn't work when renaming items (#1738790)
  Translation updates:
  - Croatian (r4786)

WinMerge 2.7.5.7 - 2007-11-19 (r4772)
  Remove MFC dependency from ShellExtension (#1833521)
  Update ShellExtension icon to new WinMerge icon (#1833616)
  BugFix: Build script didn't update PO files correctly before copying (r4756)
  BugFix: ShellExtension's icon was clipped if system font size was small
    (#1833616)
  BugFix: Merge controls were not enabled for missing lines (#1833714)

WinMerge 2.7.5.6 - 2007-11-15 (r4752)
  BugFix: Many translation-system related fixes and improvements (#1804762)
  BugFix: When copying files to VCS system, destination file was
    not checked out (#1828930)
  BugFix: Visible area indicator on location pane shook when clicking